# spleez

./: Cargo.toml  README.md  build.rs  flake.nix  tailwind.config.js
src/: main.rs
web_assets/: index.html  tailwind-output.css
